# simple-data-science

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.circleci/: example_config.yml
.github/: pull_request_template.md
docs/: classification-binary.html  clustering.html  histogram_analysis.html  regression.html
examples/: classification-binary.html
src/: classification-binary.ipynb  classification-multiclass.ipynb  clustering.ipynb  histogram_analysis.ipynb  regression.ipynb
src/utils/: classification.py  clustering.py  common.py  constants.py  evals.py  feature_selection.py
