[project]
name = "simple-data-science"
version = "0.1.0"
description = "Simple examples for common Data Science use cases with tabular data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "kneed>=0.8.5",
    "matplotlib>=3.10.1",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pre-commit>=4.2.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "shap>=0.47.1",
    "statsmodels>=0.14.4",
    "tqdm>=4.67.1",
    "xgboost>=3.0.0",
]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
